# curso-kubernetes-2025

./: clase-1.md  clase-10.md  clase-2.md  clase-3.md  clase-4.md  clase-5.md  clase-6.md  clase-7.md  clase-8.md  clase-9.md
clase 10/: 02-secret.yaml  03-cm.yaml  04-db.yaml  05-wp.yaml  06-ingress.yaml
clase 10/diseño/: clase10.drawio
clase 2/Lab 1/: app.js  package.json
clase 2/Lab 2/: .env  app.js  package.json
clase 2/Lab 3/: Dockerfile  index.js  package.json
clase 3/Lab 1/: Dockerfile  docker-compose.yml
clase 3/Lab 1/app/: main.py
clase 3/Lab 2/: docker-compose.yml
clase 3/Lab 2/app/: main.py
clase 3/Lab 3/: docker-compose.yml
clase 3/Lab 3/service_a/: main.py  requirements.txt
clase 3/Lab 3/service_b/: main.py
clase 4/Lab 1/: docker-compose.yml
clase 4/Lab 2/: docker-compose.yml
clase 4/Lab 3/: Dockerfile  docker-compose.yml
clase 4/Lab 3/app/: main.py  requirements.txt
clase 4/Lab 4/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  openssl.cnf  pyproject.toml  requirements.txt
clase 4/Lab 4/app/: crud.py  database.py  main.py  models.py
clase 6/: README.md
clase 7/: lab-1.yaml  lab-2.yaml  lab-3.yaml  lab-4.yaml
clase 8/: deployment.yaml  lab-1.yaml  lab-2.yaml  lab-3.yaml
clase 9/Lab-1/: 01-role.yaml  02-rolebinding.yaml  revisar.md
clase 9/Lab-2/: 00-preparacion.md  01-netpol.yaml  01-test.md  02-netpol2.yaml  02-test.md
clase 9/Lab-3/: 01-sa.yaml  02-pod.yaml  03-verificar.md
clase 9/Lab-4/: lab.md
