[tool.poetry]
name = "app"
version = "0.1.0"
description = "INDAP - Microservicio"
authors = ["Admin <admin@indap.cl>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
pyodbc = "^5.1.0"
pyjwt = "^2.9.0"
pytz = "^2024.2"
prometheus-client = "^0.21.0"
opentelemetry-distro = "^0.48b0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-logging = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
rut-chile = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"